# QuantiSPY

./: CMakeLists.txt  README.md  app.py  bestdata.csv  data.csv  data_fetcher.py  gui.py  historical.csv  plotter.py  requirements.txt  routes.py  setup.py  spy_data_5m.csv  stock_hmm.cp311-win_amd64.pyd  trendline.py  vwap_calculation.py  websocket.py
Release/: cpp_hmm.cp311-win_amd64.pyd
cpp/: hmm.cpp  hmm.h  hmm_wrapper.cpp  stock_hmm.cpp  viterbi.cpp  viterbi.h
python/: directional_change.py  gui.py  hmmtest.py  plotter.py  relativestrength.py
